syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

import "runtime.feed.proto";
import "runtime.package.proto";


message BoolParameterConfig {
    string property_id = 1;
    bool value = 2;
}

message Int32ParameterConfig {
    string property_id = 1;
    int32 value = 2;
}

message NullableInt32ParameterConfig {
    string property_id = 1;
    google.protobuf.Int32Value value = 2;
}

message DoubleParameterConfig {
    string property_id = 1;
    double value = 2;
}

message NullableDoubleParameterConfig {
    string property_id = 1;
    google.protobuf.DoubleValue value = 2;
}

message StringParameterConfig {
    string property_id = 1;
    string value = 2;
}

message EnumParameterConfig {
    string property_id = 1;
    string value = 2;
}

message FileParameterConfig {
    string property_id = 1;
    string file_name = 2;
}


message SymbolConfig {
    enum SymbolOrigin {
        ONLINE = 0;
        CUSTOM = 1;
        TOKEN = 2;
    }

    string name = 1;
    SymbolOrigin origin = 2;
}

message QuoteInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    bool use_l2 = 3;
}

message BarToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message BarToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message QuoteToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message QuoteToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message ColoredLineOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.LineStyle line_style = 5;
}

message MarkerSeriesOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.MarkerSize marker_size = 5;
}

message PluginPermissions {
    bool trade_allowed = 1;
    bool isolated = 2;
}

message PluginConfig {
    PluginKey key = 1;
    Feed.Timeframe timeframe = 2;
    Feed.Timeframe model_timeframe = 3;
    SymbolConfig main_symbol = 4;
    MappingKey selected_mapping = 5;
    string instance_id = 6;
    PluginPermissions permissions = 7;
    repeated google.protobuf.Any properties = 8;
}